<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninActivity"
    android:background="@color/fondo_2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gitl"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mani" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="@dimen/ancho"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/izquierda"
        android:layout_marginStart="@dimen/izquierda"
        android:alpha="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:fontFamily="@font/montserrat"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="@dimen/ancho"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle"
        android:layout_marginStart="@dimen/izquierda"
        android:layout_marginLeft="@dimen/izquierda"
        android:alpha="0.8">
        <!-- La propiedad endIconMode marca hace que aparezca el
        icono de mostrar contraseña al final de la misma, un ojo
        con una barra cruzándolo.
         Se puede cambiar dicho icono con un endIconDrawable e
         introduciéndole el icono que se quiera-->

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:fontFamily="@font/montserrat"
            android:hint="@string/hint_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="@dimen/ancho"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconDrawable="@drawable/mail"
        app:endIconMode="custom"
        android:layout_marginLeft="@dimen/izquierda"
        android:layout_marginStart="@dimen/izquierda"
        android:alpha="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:fontFamily="@font/montserrat"
            android:hint="@string/hint_email" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/color_boton"
        android:fontFamily="@font/montserrat"
        android:text="@string/registrar"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/inicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/izquierda"
        android:layout_marginLeft="@dimen/izquierda"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:onClick="regitro"
        android:text="@string/inicio_sesion"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/btnStraight"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="OK"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="@dimen/izquierda"
        app:layout_constraintTop_toBottomOf="@+id/inicioSesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ButtonStraight"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOutlined"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="OK"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="@dimen/izquierda"
        app:layout_constraintTop_toBottomOf="@+id/btnStraight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ButtonOutlined"/>

</androidx.constraintlayout.widget.ConstraintLayout>